# Python_WEB

Web_socket_chat/server_chat/: pyproject.toml
Web_socket_chat/server_chat/server_chat/: server.py
home_work_3/: README.md
home_work_3/homework_3/: process.py  thread.py
home_work_4/front-init/: main.py
home_work_4/front-init/storage/: data.json
home_work_5/: exchange.py
home_work_6/: DBase.db  main.py
